- added button and logic to popup for opening sidebar

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,6 +8,7 @@
     <title>Popup</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Popup</h1>
+    <button id="sidebar-button" data-toggle="open">Open Sidebar</button>
 </body>
 </html>
