- added new tab logic, handlers, boilerplate

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Popup</h1>
-    <button id="sidebar-button" data-toggle="open">Open Sidebar</button>
+    <button id="sidebar-button">Open Sidebar</button>
+    <button id="new-tab-button">Open Tab</button>
 </body>
 </html>
