- added <main> styles - added sidepanel test elements, form, updated styles

--- a/ui/popup/popup.html
+++ b/ui/popup/popup.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Popup</h1>
-    <button id="sidebar-button">Open Sidebar</button>
-    <button id="new-tab-button">Open Tab</button>
+    <main>
+        <button id="sidepanel-button">Open Side Panel</button>
+        <button id="new-tab-button">Open Tab</button>
+    </main>
 </body>
 </html>
