- added digitalClock web component - updated tab.js to register the wc - updated tab to display the dc wc

--- a/ui/tab/tab.html
+++ b/ui/tab/tab.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./tab.css">
-    <script src="./tab.js"></script>
+    <script src="./tab.js" type="module"></script>
     <title>Tab</title>
 </head>
 <body>
-    <h1>Tab</h1>
+    <main>
+        <digital-clock show-seconds show-date 
+            style="--rem-scale: 2"></digital-clock>
+    </main>
 </body>
 </html>
