- minor base styles tweaks - changed dc rem-scale to base-unit

--- a/ui/tab/tab.html
+++ b/ui/tab/tab.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <digital-clock show-seconds show-date 
-            style="--rem-scale: 2"></digital-clock>
+            style="--base-unit: 6vw"></digital-clock>
     </main>
 </body>
 </html>
