--- a/ui/tab/tab.html
+++ b/ui/tab/tab.html
@@ -5,12 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./tab.css">
     <script src="./tab.js" type="module"></script>
-    <title>Tab</title>
+    <title>New Tab</title>
 </head>
 <body>
     <main>
+        <digital-clock show-seconds show-date
+            city="Erie, Pennsylvania"
+            timezone="America/New_York"
+            style="--base-unit: min(7vw, 6vh);
+                  --font-color: #c5a128;">
+        </digital-clock>
         <digital-clock show-seconds show-date 
-            style="--base-unit: 6vw"></digital-clock>
+            city="Sài Gòn, Việt Nam"
+            timezone="Asia/Ho_Chi_Minh"
+            style="--base-unit: min(7vw, 6vh);
+                  --font-color: #b83636;">
+        </digital-clock>
     </main>
 </body>
 </html>
