- tiny css tweaks, whitespace

--- a/ui/tab/tab.html
+++ b/ui/tab/tab.html
@@ -9,18 +9,21 @@
 </head>
 <body>
     <main>
-        <digital-clock show-seconds show-date
+
+        <digital-clock show-date
             city="Erie, Pennsylvania"
             timezone="America/New_York"
-            style="--base-unit: min(7vw, 6vh);
-                  --font-color: #c5a128;">
+            style="--base-unit: min(6vw, 6vh);
+                   --font-color: #c5a128;">
         </digital-clock>
-        <digital-clock show-seconds show-date 
+
+        <digital-clock show-date 
             city="Sài Gòn, Việt Nam"
             timezone="Asia/Ho_Chi_Minh"
-            style="--base-unit: min(7vw, 6vh);
-                  --font-color: #b83636;">
+            style="--base-unit: min(6vw, 6vh);
+                   --font-color: #b83636;">
         </digital-clock>
+
     </main>
 </body>
 </html>
